# lexcare.br

./: .gitignore  README.md  example_use.ipynb  metrics_all_classes.csv  metrics_overall.csv  pyproject.toml
dataset/: lexcare_br_valid.json
tools/: fewshot.py  prompt.py  schema.py
